--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: yellow; /* Bright Yellow Background */
+            background-color: gold; /* Gold Background */
             margin: 0;
             padding: 20px;
         }
@@ -31,16 +31,19 @@
         p { color: #ff6600; font-size: 18px; font-weight: bold; } /* Bright Orange */
         .net-worth { font-size: 20px; font-weight: bold; color: #ffd700; } /* Gold */
         .conversion-rate label { font-weight: bold; color: #00ffff; } /* Cyan */
+        
+        /* Dark Conversion Input Box */
         input {
             width: 80px;
             padding: 8px;
             margin-top: 10px;
             text-align: center;
             font-weight: bold;
-            background: white;
-            border: 2px solid #ff00ff;
-            color: black;
+            background: #222; /* Dark Background */
+            border: 2px solid #ff00ff; /* Magenta Border */
+            color: white; /* White Text */
         }
+        
         .highlight-usd { color: #ff1493; text-shadow: 0px 0px 10px rgba(255, 20, 147, 1); font-weight: bold; } /* Deep Pink */
         .highlight-inr { color: #ff4500; text-shadow: 0px 0px 10px rgba(255, 69, 0, 1); font-weight: bold; } /* Bright Red-Orange */
     </style>
